2011-01-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/*: Updated help documents, images and translations.
	  Thanks Cristian Marchi!

2011-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/iconimage.py: Fixed an icon scale bug.
	* help/C/gphotoframe.xml: Updated help documentation.
	  Thanks Cristian Marchi!

2011-01-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* constants.py: Added checking for user directory permissions.

2011-01-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/geocoding.py: Added support for reverse geocoding on tooltip.

2011-01-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/api.py: Fixed count & per_page options.
	* flickr/__init__.py: Improved code for rate of latest photos.

2011-01-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr.py: Added support for large images.
	* flickr/api.py: Added support for url_z and url_l.

2011-01-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py: Added new gconf key for rate of latest photos.

2011-01-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* shotwell.py: Disable a ban icon on shotwell plugin by default.

2010-12-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, plugins/base.py: Added ban (black list) functions.

2010-12-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* idlecheck.py: Fixed dbus errors.

2010-12-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gtkimage.py: Modified Flickr photo size check.
	* folder.py: Fixed an AttributeError (issue #79).

2010-12-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/base.py: Added new gconf key (show_filename_suffix).
	* liststore.py: Added cheking for session idle mode.

2010-12-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gtkimage.py, html.py: Added support for generating thumbnails.
	* share/history/jquery.*.js: Added support for jQuery plugin for
	  lazy loading images.

2010-12-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
